# shortscale-rs

./: .gitpod.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench-shortscale.rs
src/: extra.rs  lib.rs  shortscale.rs
tests/: test-shortscale.rs
